[project]
name = "adbutils_async"
version = "0.0.3"
description = "Python adb async library for adb service."
authors = [{ name = "tomin", email = "tomin@tomin.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx", "Pillow", "deprecation", "retry","apkutils2"]

[project.urls]
homepage = "https://github.com/touxiaoling/adbutils_async"
repository = "https://github.com/touxiaoling/adbutils_async"
documentation = "https://github.com/touxiaoling/adbutils_async"

[build-system]
requires = ["setuptools", "wheel", "pbr"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"

[tool.flake8]
max-line-length = 128
exclude = [".git", "__pycache__"]

[tool.black]
line-length = 128
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 128
target-version = "py310"

[tool.ruff.lint]
ignore = ["F401"]

[tool.isort]
profile = "black"
